Update rangeToScript.json, scriptToRange.json, scripts.json which are sync up cldr30 and ucd 9.0. Fix unittest failures. Update Localereference page

--- a/js/data/locale/rangeToScript.json
+++ b/js/data/locale/rangeToScript.json
@@ -359,6 +359,20 @@
     ],
     [
         "Arab",
+        2230,
+        2237
+    ],
+    [
+        "Arab",
+        2260,
+        2273
+    ],
+    [
+        "Zyyy",
+        2274
+    ],
+    [
+        "Arab",
         2275,
         2303
     ],
@@ -814,7 +828,7 @@
     ],
     [
         "Knda",
-        3201,
+        3200,
         3203
     ],
     [
@@ -914,25 +928,16 @@
     [
         "Mlym",
         3402,
-        3406
+        3407
     ],
     [
         "Mlym",
-        3415
-    ],
-    [
-        "Mlym",
-        3423,
+        3412,
         3427
     ],
     [
         "Mlym",
         3430,
-        3445
-    ],
-    [
-        "Mlym",
-        3449,
         3455
     ],
     [
@@ -1533,6 +1538,11 @@
         7295
     ],
     [
+        "Cyrl",
+        7296,
+        7304
+    ],
+    [
         "Sund",
         7360,
         7367
@@ -1647,7 +1657,7 @@
     ],
     [
         "Zinh",
-        7676,
+        7675,
         7679
     ],
     [
@@ -1840,7 +1850,7 @@
     [
         "Zyyy",
         8592,
-        9210
+        9214
     ],
     [
         "Zyyy",
@@ -1997,7 +2007,7 @@
     [
         "Zyyy",
         11776,
-        11842
+        11844
     ],
     [
         "Hani",
@@ -2238,7 +2248,7 @@
     [
         "Latn",
         42891,
-        42925
+        42926
     ],
     [
         "Latn",
@@ -2268,7 +2278,7 @@
     [
         "Saur",
         43136,
-        43204
+        43205
     ],
     [
         "Saur",
@@ -2709,7 +2719,7 @@
     [
         "Grek",
         65856,
-        65932
+        65934
     ],
     [
         "Zyyy",
@@ -2801,6 +2811,16 @@
         "Osma",
         66720,
         66729
+    ],
+    [
+        "Osge",
+        66736,
+        66771
+    ],
+    [
+        "Osge",
+        66776,
+        66811
     ],
     [
         "Elba",
@@ -3133,7 +3153,7 @@
     [
         "Khoj",
         70163,
-        70205
+        70206
     ],
     [
         "Mult",
@@ -3243,6 +3263,19 @@
         70516
     ],
     [
+        "Newa",
+        70656,
+        70745
+    ],
+    [
+        "Newa",
+        70747
+    ],
+    [
+        "Newa",
+        70749
+    ],
+    [
         "Tirh",
         70784,
         70855
@@ -3271,6 +3304,11 @@
         "Modi",
         71248,
         71257
+    ],
+    [
+        "Mong",
+        71264,
+        71276
     ],
     [
         "Takr",
@@ -3310,6 +3348,41 @@
         "Pauc",
         72384,
         72440
+    ],
+    [
+        "Bhks",
+        72704,
+        72712
+    ],
+    [
+        "Bhks",
+        72714,
+        72758
+    ],
+    [
+        "Bhks",
+        72760,
+        72773
+    ],
+    [
+        "Bhks",
+        72784,
+        72812
+    ],
+    [
+        "Marc",
+        72816,
+        72847
+    ],
+    [
+        "Marc",
+        72850,
+        72871
+    ],
+    [
+        "Marc",
+        72873,
+        72886
     ],
     [
         "Xsux",
@@ -3410,6 +3483,20 @@
         "Plrd",
         94095,
         94111
+    ],
+    [
+        "Tang",
+        94176
+    ],
+    [
+        "Tang",
+        94208,
+        100332
+    ],
+    [
+        "Tang",
+        100352,
+        101106
     ],
     [
         "Kana",
@@ -3637,6 +3724,31 @@
         121519
     ],
     [
+        "Glag",
+        122880,
+        122886
+    ],
+    [
+        "Glag",
+        122888,
+        122904
+    ],
+    [
+        "Glag",
+        122907,
+        122913
+    ],
+    [
+        "Glag",
+        122915,
+        122916
+    ],
+    [
+        "Glag",
+        122918,
+        122922
+    ],
+    [
         "Mend",
         124928,
         125124
@@ -3645,6 +3757,21 @@
         "Mend",
         125127,
         125142
+    ],
+    [
+        "Adlm",
+        125184,
+        125258
+    ],
+    [
+        "Adlm",
+        125264,
+        125273
+    ],
+    [
+        "Adlm",
+        125278,
+        125279
     ],
     [
         "Arab",
@@ -3848,7 +3975,7 @@
     [
         "Zyyy",
         127344,
-        127386
+        127404
     ],
     [
         "Zyyy",
@@ -3867,7 +3994,7 @@
     [
         "Zyyy",
         127504,
-        127546
+        127547
     ],
     [
         "Zyyy",
@@ -3882,17 +4009,7 @@
     [
         "Zyyy",
         127744,
-        128377
-    ],
-    [
-        "Zyyy",
-        128379,
-        128419
-    ],
-    [
-        "Zyyy",
-        128421,
-        128720
+        128722
     ],
     [
         "Zyyy",
@@ -3902,7 +4019,7 @@
     [
         "Zyyy",
         128752,
-        128755
+        128758
     ],
     [
         "Zyyy",
@@ -3942,12 +4059,36 @@
     [
         "Zyyy",
         129296,
-        129304
+        129310
+    ],
+    [
+        "Zyyy",
+        129312,
+        129319
+    ],
+    [
+        "Zyyy",
+        129328
+    ],
+    [
+        "Zyyy",
+        129331,
+        129342
+    ],
+    [
+        "Zyyy",
+        129344,
+        129355
+    ],
+    [
+        "Zyyy",
+        129360,
+        129374
     ],
     [
         "Zyyy",
         129408,
-        129412
+        129425
     ],
     [
         "Zyyy",
