--- a/js/data/locale/scriptToRange.json
+++ b/js/data/locale/scriptToRange.json
@@ -73,6 +73,9 @@
             1757
         ],
         [
+            2274
+        ],
+        [
             2404,
             2405
         ],
@@ -169,7 +172,7 @@
         ],
         [
             8592,
-            9210
+            9214
         ],
         [
             9216,
@@ -209,7 +212,7 @@
         ],
         [
             11776,
-            11842
+            11844
         ],
         [
             12272,
@@ -527,7 +530,7 @@
         ],
         [
             127344,
-            127386
+            127404
         ],
         [
             127462,
@@ -539,7 +542,7 @@
         ],
         [
             127504,
-            127546
+            127547
         ],
         [
             127552,
@@ -551,15 +554,7 @@
         ],
         [
             127744,
-            128377
-        ],
-        [
-            128379,
-            128419
-        ],
-        [
-            128421,
-            128720
+            128722
         ],
         [
             128736,
@@ -567,7 +562,7 @@
         ],
         [
             128752,
-            128755
+            128758
         ],
         [
             128768,
@@ -599,11 +594,30 @@
         ],
         [
             129296,
-            129304
+            129310
+        ],
+        [
+            129312,
+            129319
+        ],
+        [
+            129328
+        ],
+        [
+            129331,
+            129342
+        ],
+        [
+            129344,
+            129355
+        ],
+        [
+            129360,
+            129374
         ],
         [
             129408,
-            129412
+            129425
         ],
         [
             129472
@@ -705,7 +719,7 @@
         ],
         [
             42891,
-            42925
+            42926
         ],
         [
             42928,
@@ -861,7 +875,7 @@
         ],
         [
             65856,
-            65932
+            65934
         ],
         [
             65952
@@ -879,6 +893,10 @@
         [
             1159,
             1327
+        ],
+        [
+            7296,
+            7304
         ],
         [
             7467
@@ -1004,6 +1022,14 @@
         [
             2208,
             2228
+        ],
+        [
+            2230,
+            2237
+        ],
+        [
+            2260,
+            2273
         ],
         [
             2275,
@@ -1552,7 +1578,7 @@
     ],
     "Knda": [
         [
-            3201,
+            3200,
             3203
         ],
         [
@@ -1634,21 +1660,14 @@
         ],
         [
             3402,
-            3406
+            3407
         ],
         [
-            3415
-        ],
-        [
-            3423,
+            3412,
             3427
         ],
         [
             3430,
-            3445
-        ],
-        [
-            3449,
             3455
         ]
     ],
@@ -2122,6 +2141,10 @@
         [
             6272,
             6314
+        ],
+        [
+            71264,
+            71276
         ]
     ],
     "Hira": [
@@ -2330,7 +2353,7 @@
             7669
         ],
         [
-            7676,
+            7675,
             7679
         ],
         [
@@ -2585,6 +2608,26 @@
         [
             11312,
             11358
+        ],
+        [
+            122880,
+            122886
+        ],
+        [
+            122888,
+            122904
+        ],
+        [
+            122907,
+            122913
+        ],
+        [
+            122915,
+            122916
+        ],
+        [
+            122918,
+            122922
         ]
     ],
     "Tfng": [
@@ -2738,7 +2781,7 @@
     "Saur": [
         [
             43136,
-            43204
+            43205
         ],
         [
             43214,
@@ -3194,7 +3237,7 @@
         ],
         [
             70163,
-            70205
+            70206
         ]
     ],
     "Lina": [
@@ -3429,6 +3472,87 @@
         [
             121505,
             121519
+        ]
+    ],
+    "Adlm": [
+        [
+            125184,
+            125258
+        ],
+        [
+            125264,
+            125273
+        ],
+        [
+            125278,
+            125279
+        ]
+    ],
+    "Bhks": [
+        [
+            72704,
+            72712
+        ],
+        [
+            72714,
+            72758
+        ],
+        [
+            72760,
+            72773
+        ],
+        [
+            72784,
+            72812
+        ]
+    ],
+    "Marc": [
+        [
+            72816,
+            72847
+        ],
+        [
+            72850,
+            72871
+        ],
+        [
+            72873,
+            72886
+        ]
+    ],
+    "Newa": [
+        [
+            70656,
+            70745
+        ],
+        [
+            70747
+        ],
+        [
+            70749
+        ]
+    ],
+    "Osge": [
+        [
+            66736,
+            66771
+        ],
+        [
+            66776,
+            66811
+        ]
+    ],
+    "Tang": [
+        [
+            94176
+        ],
+        [
+            94208,
+            100332
+        ],
+        [
+            100352,
+            101106
         ]
     ]
 }
