Change resources to ignore done by hand

--- a/js/data/locale/en/ctrynames.json
+++ b/js/data/locale/en/ctrynames.json
@@ -1,91 +1,42 @@
 {
-    "generated": false,
-    "Antigua & Barbuda": "AG",
-    "Arabia": "SA",
-    "Bosnia & Herzegovina": "BA",
-    "BVI": "VG",
-    "Cape Verde Islands": "CV",
-    "Cocos & Keeling Islands": "CC",
-    "Cocos (Keeling) Islands": "CC",
-    "Congo, Democratic Republic of the": "CD",
-    "Democratic Republic of the Congo": "CD",
-    "DPRK": "KP",
-    "Dubai": "AE",
-    "East Timor": "TL",
-    "England": "GB",
-    "Falklands": "FK",
-    "Heard Island & McDonald Islands": "HM",
-    "Occupied Palestinian Territory": "PS",
-    "P. R. China": "CN",
-    "P. R. of China": "CN",
-    "P.R. of China": "CN",
-    "Palestinian Territory": "PS",
-    "People's Republic of China": "CN",
+    "Asia": "142",
+    "Central Asia": "143",
+    "Western Asia": "145",
+    "Europe": "150",
+    "Eastern Europe": "151",
+    "Northern Europe": "154",
+    "Western Europe": "155",
+    "Latin America": "419",
+    "World": "001",
+    "Africa": "002",
+    "North America": "003",
+    "South America": "005",
+    "Oceania": "009",
+    "Western Africa": "011",
+    "Central America": "013",
+    "Eastern Africa": "014",
+    "Northern Africa": "015",
+    "Middle Africa": "017",
+    "Southern Africa": "018",
+    "Americas": "019",
+    "Northern America": "021",
+    "Caribbean": "029",
+    "Eastern Asia": "030",
+    "Southern Asia": "034",
+    "Southeast Asia": "035",
+    "Southern Europe": "039",
+    "Australasia": "053",
+    "Melanesia": "054",
+    "Micronesian Region": "057",
     "Polynesia": "061",
-    "PR china": "CN",
-    "PRC": "CN",
-    "Republic of China": "TW",
-    "Republic of Ireland": "IE",
-    "Republic of Singapore": "SG",
-    "Saint Barts": "BL",
-    "Saint Helena, Ascension & Tristan da Cunha": "SH",
-    "Saint Kitts & Nevis": "KN",
-    "Saint Pierre & Miquelon": "PM",
-    "Saint Vincent & the Grenadines": "VC",
-    "Sao Tome & Principe": "ST",
-    "Scotland": "GB",
-    "Solomons": "SB",
-    "South Georgia & the South Sandwich Islands": "GS",
-    "St Barthelemy": "BL",
-    "St Barthélemy": "BL",
-    "St Barts": "BL",
-    "St Helena": "SH",
-    "St Helena, Ascension & Tristan da Cunha": "SH",
-    "St Helena, Ascension and Tristan da Cunha": "SH",
-    "St Kitts": "KN",
-    "St Kitts & Nevis": "KN",
-    "St Kitts and Nevis": "KN",
-    "St Lucia": "LC",
-    "St Martin": "MF",
-    "St Pierre": "PM",
-    "St Pierre & Miquelon": "PM",
-    "St Pierre and Miquelon": "PM",
-    "St Vincent": "VC",
-    "St Vincent & the Grenadines": "VC",
-    "St Vincent and the Grenadines": "VC",
-    "St. Barts": "BL",
-    "St. Helena, Ascension & Tristan da Cunha": "SH",
-    "St. Kitts & Nevis": "KN",
-    "St. Pierre & Miquelon": "PM",
-    "St. Vincent & the Grenadines": "VC",
-    "Svalbard & Jan Mayen": "SJ",
-    "Sénégal": "SN",
-    "The Bahamas": "BS",
-    "The Czech Republic": "CZ",
-    "The Grenadines": "VC",
-    "The Netherlands": "NL",
-    "The Philippines": "PH",
-    "The Republic of Singapore": "SG",
-    "The South Sandwich Islands": "GS",
-    "The Sudan": "SD",
-    "The US Virgin Islands": "VI",
-    "Trinidad & Tobago": "TT",
-    "Turks & Caicos Islands": "TC",
-    "Vatican City": "VA",
-    "Vatican City State": "VA",
-    "Virgin Islands": "VI",
-    "Wales": "GB",
-    "Wallis & Futuna": "WF",
-    "Éire": "IE",
     "Ascension Island": "AC",
     "Andorra": "AD",
     "United Arab Emirates": "AE",
     "Afghanistan": "AF",
-    "Antigua and Barbuda": "AG",
+    "Antigua & Barbuda": "AG",
     "Anguilla": "AI",
     "Albania": "AL",
     "Armenia": "AM",
-    "Netherlands Antilles": "AN",
     "Angola": "AO",
     "Antarctica": "AQ",
     "Argentina": "AR",
@@ -95,7 +46,7 @@
     "Aruba": "AW",
     "Åland Islands": "AX",
     "Azerbaijan": "AZ",
-    "Bosnia and Herzegovina": "BA",
+    "Bosnia & Herzegovina": "BA",
     "Barbados": "BB",
     "Bangladesh": "BD",
     "Belgium": "BE",
@@ -104,7 +55,7 @@
     "Bahrain": "BH",
     "Burundi": "BI",
     "Benin": "BJ",
-    "Saint Barthélemy": "BL",
+    "St. Barthélemy": "BL",
     "Bermuda": "BM",
     "Brunei": "BN",
     "Bolivia": "BO",
@@ -117,7 +68,7 @@
     "Belarus": "BY",
     "Belize": "BZ",
     "Canada": "CA",
-    "Cocos [Keeling] Islands": "CC",
+    "Cocos (Keeling) Islands": "CC",
     "Congo - Kinshasa": "CD",
     "Central African Republic": "CF",
     "Congo - Brazzaville": "CG",
@@ -143,7 +94,7 @@
     "Dominica": "DM",
     "Dominican Republic": "DO",
     "Algeria": "DZ",
-    "Ceuta and Melilla": "EA",
+    "Ceuta & Melilla": "EA",
     "Ecuador": "EC",
     "Estonia": "EE",
     "Egypt": "EG",
@@ -152,6 +103,7 @@
     "Spain": "ES",
     "Ethiopia": "ET",
     "European Union": "EU",
+    "Eurozone": "EZ",
     "Finland": "FI",
     "Fiji": "FJ",
     "Falkland Islands": "FK",
@@ -172,13 +124,13 @@
     "Guadeloupe": "GP",
     "Equatorial Guinea": "GQ",
     "Greece": "GR",
-    "South Georgia and the South Sandwich Islands": "GS",
+    "South Georgia & South Sandwich Islands": "GS",
     "Guatemala": "GT",
     "Guam": "GU",
     "Guinea-Bissau": "GW",
     "Guyana": "GY",
     "Hong Kong SAR China": "HK",
-    "Heard Island and McDonald Islands": "HM",
+    "Heard & McDonald Islands": "HM",
     "Honduras": "HN",
     "Croatia": "HR",
     "Haiti": "HT",
@@ -203,7 +155,7 @@
     "Cambodia": "KH",
     "Kiribati": "KI",
     "Comoros": "KM",
-    "Saint Kitts and Nevis": "KN",
+    "St. Kitts & Nevis": "KN",
     "North Korea": "KP",
     "South Korea": "KR",
     "Kuwait": "KW",
@@ -211,7 +163,7 @@
     "Kazakhstan": "KZ",
     "Laos": "LA",
     "Lebanon": "LB",
-    "Saint Lucia": "LC",
+    "St. Lucia": "LC",
     "Liechtenstein": "LI",
     "Sri Lanka": "LK",
     "Liberia": "LR",
@@ -224,12 +176,12 @@
     "Monaco": "MC",
     "Moldova": "MD",
     "Montenegro": "ME",
-    "Saint Martin": "MF",
+    "St. Martin": "MF",
     "Madagascar": "MG",
     "Marshall Islands": "MH",
     "Macedonia": "MK",
     "Mali": "ML",
-    "Myanmar [Burma]": "MM",
+    "Myanmar (Burma)": "MM",
     "Mongolia": "MN",
     "Macau SAR China": "MO",
     "Northern Mariana Islands": "MP",
@@ -263,7 +215,7 @@
     "Philippines": "PH",
     "Pakistan": "PK",
     "Poland": "PL",
-    "Saint Pierre and Miquelon": "PM",
+    "St. Pierre & Miquelon": "PM",
     "Pitcairn Islands": "PN",
     "Puerto Rico": "PR",
     "Palestinian Territories": "PS",
@@ -283,9 +235,9 @@
     "Sudan": "SD",
     "Sweden": "SE",
     "Singapore": "SG",
-    "Saint Helena": "SH",
+    "St. Helena": "SH",
     "Slovenia": "SI",
-    "Svalbard and Jan Mayen": "SJ",
+    "Svalbard & Jan Mayen": "SJ",
     "Slovakia": "SK",
     "Sierra Leone": "SL",
     "San Marino": "SM",
@@ -293,13 +245,13 @@
     "Somalia": "SO",
     "Suriname": "SR",
     "South Sudan": "SS",
-    "São Tomé and Príncipe": "ST",
+    "São Tomé & Príncipe": "ST",
     "El Salvador": "SV",
     "Sint Maarten": "SX",
     "Syria": "SY",
     "Swaziland": "SZ",
     "Tristan da Cunha": "TA",
-    "Turks and Caicos Islands": "TC",
+    "Turks & Caicos Islands": "TC",
     "Chad": "TD",
     "French Southern Territories": "TF",
     "Togo": "TG",
@@ -311,72 +263,31 @@
     "Tunisia": "TN",
     "Tonga": "TO",
     "Turkey": "TR",
-    "Trinidad and Tobago": "TT",
+    "Trinidad & Tobago": "TT",
     "Tuvalu": "TV",
     "Taiwan": "TW",
     "Tanzania": "TZ",
     "Ukraine": "UA",
     "Uganda": "UG",
-    "U.S. Minor Outlying Islands": "UM",
+    "U.S. Outlying Islands": "UM",
+    "United Nations": "UN",
     "United States": "US",
     "Uruguay": "UY",
     "Uzbekistan": "UZ",
-    "Saint Vincent and the Grenadines": "VC",
+    "Vatican City": "VA",
+    "St. Vincent & Grenadines": "VC",
     "Venezuela": "VE",
     "British Virgin Islands": "VG",
     "U.S. Virgin Islands": "VI",
     "Vietnam": "VN",
     "Vanuatu": "VU",
-    "Wallis and Futuna": "WF",
+    "Wallis & Futuna": "WF",
     "Samoa": "WS",
+    "Kosovo": "XK",
     "Yemen": "YE",
     "Mayotte": "YT",
     "South Africa": "ZA",
     "Zambia": "ZM",
     "Zimbabwe": "ZW",
-    "Unknown Region": "ZZ",
-    "Asia": "142",
-    "Central Asia": "143",
-    "Western Asia": "145",
-    "Europe": "150",
-    "Eastern Europe": "151",
-    "Northern Europe": "154",
-    "Western Europe": "155",
-    "Latin America": "419",
-    "World": "001",
-    "Africa": "002",
-    "North America": "003",
-    "South America": "005",
-    "Oceania": "009",
-    "Western Africa": "011",
-    "Central America": "013",
-    "Eastern Africa": "014",
-    "Northern Africa": "015",
-    "Middle Africa": "017",
-    "Southern Africa": "018",
-    "Americas": "019",
-    "Northern America": "021",
-    "Caribbean": "029",
-    "Eastern Asia": "030",
-    "Southern Asia": "034",
-    "South-Eastern Asia": "035",
-    "Southern Europe": "039",
-    "Australasia": "053",
-    "Melanesia": "054",
-    "Micronesian Region": "057",
-    "U.S. Outlying Islands": "UM",
-    "Southeast Asia": "035",
-    "St. Barthélemy": "BL",
-    "Ceuta & Melilla": "EA",
-    "Eurozone": "EZ",
-    "South Georgia & South Sandwich Islands": "GS",
-    "Heard & McDonald Islands": "HM",
-    "St. Lucia": "LC",
-    "St. Martin": "MF",
-    "Myanmar (Burma)": "MM",
-    "St. Helena": "SH",
-    "São Tomé & Príncipe": "ST",
-    "United Nations": "UN",
-    "St. Vincent & Grenadines": "VC",
-    "Kosovo": "XK"
+    "Unknown Region": "ZZ"
 }
