--- a/js/data/locale/es/CL/ctrynames.json
+++ b/js/data/locale/es/CL/ctrynames.json
@@ -1,6 +1,8 @@
 {
     "Asia sudoriental": "035",
     "Bosnia y Herzegovina": "BA",
+    "Costa de Marfil": "CI",
     "Sahara Occidental": "EH",
+    "Islas Canarias": "IC",
     "Islas Ultramarinas": "QO"
 }
