--- a/js/data/locale/es/EC/ctrynames.json
+++ b/js/data/locale/es/EC/ctrynames.json
@@ -1,5 +1,7 @@
 {
     "Asia sudoriental": "035",
     "Bosnia y Herzegovina": "BA",
+    "Costa de Marfil": "CI",
+    "Islas Canarias": "IC",
     "Islas Ultramarinas": "QO"
 }
