--- a/js/data/locale/es/MX/ctrynames.json
+++ b/js/data/locale/es/MX/ctrynames.json
@@ -14,6 +14,8 @@
     "Sudeste Asiático": "035",
     "Europa del Sur": "039",
     "Bosnia y Herzegovina": "BA",
+    "Costa de Marfil": "CI",
+    "Islas Canarias": "IC",
     "Islas Ultramarinas": "QO",
     "Islas Ultramarinas Menores de Estados Unidos": "UM"
 }
