--- a/js/data/locale/es/SV/ctrynames.json
+++ b/js/data/locale/es/SV/ctrynames.json
@@ -1,4 +1,8 @@
 {
     "Asia sudoriental": "035",
-    "Islas Ultramarinas": "QO"
+    "Costa de Marfil": "CI",
+    "Islas Canarias": "IC",
+    "Islas Ultramarinas": "QO",
+    "Tristán da Cunha": "TA",
+    "Timor Oriental": "TL"
 }
