Added "dentist" and "dental hygienist" to the list of honorific suffices for Chinese.

--- a/js/data/locale/zh/Hant/name.json
+++ b/js/data/locale/zh/Hant/name.json
@@ -69,11 +69,13 @@
         "首席財務官",
         "首席技術官",
         "首席營運官",
+        "牙齒衛生員",
         "總工程師",
         "總工程師",
         "高級督察",
         "格拉瑪報",
         "格拉瑪報",
+        "牙科醫生",
         "工程師",
         "總經理",
         "外甥女",
